--- a/planificacion.html
+++ b/planificacion.html
@@ -205,7 +205,7 @@
         <h1>Planificación de interfaces web</h1>
         <h2>Elementos básicos de una interfaz web</h2>
         <h3>El Color</h3>
-        <div class="contenedor">
+        <div class="contenedor background">
             <div class="izquierda">
                 <div class="caja-texto">
                     <h4>Modelo RGB</h4>
@@ -238,7 +238,7 @@
                 <img src="assets/img/planificacion/rgb.png" alt="color rgb">
             </div>
         </div>
-        <div class="contenedor">
+        <div class="contenedor background">
             <div class="derecha">
                 <img src="assets/img/planificacion/hsl.png" alt="color hsl" style="padding-top: 70px;">
             </div>
@@ -256,7 +256,7 @@
                 </div>
             </div>
         </div>
-        <div class="contenedor-largo">
+        <div class="contenedor-largo background">
             <div class="arriba">
                 <img src="assets/img/planificacion/hsv.png" alt="color hsv">
             </div>
@@ -284,7 +284,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">La Tipografía</h3>
-        <div class="contenedor">
+        <div class="contenedor background">
             <div class="arriba">
                 <img src="assets/img/planificacion/font.png" alt="fuente serif vs san serif" style="width: 500px;">
             </div>
@@ -392,7 +392,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Los Iconos</h3>
-        <div class="contenedor">
+        <div class="contenedor background">
             <div class="izquierda">
                 <img src="assets/img/planificacion/iconos.png" width="400px" alt="iconos web">
             </div>
@@ -411,7 +411,7 @@
         </div>
         <h2 style="margin-top: 100px;">Estructura de una pagina web</h2>
         <h3>Cabecera</h3>
-        <div class="contenedor">
+        <div class="contenedor background">
             <div class="arriba" style="padding-top: 20px;">
                 <img class="grande" src="assets/img/planificacion/cabecera.png" alt="ejemplo cabecera web">
             </div>
@@ -429,7 +429,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Menu o sistema de navegación</h3>
-        <div class="contenedor-largo">
+        <div class="contenedor-largo background">
             <div class="arriba" style="padding-top: 20px;">
                 <div class="caja-texto" style="padding-top: 30px;">
                     <p>
@@ -445,7 +445,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Cuerpo de la página</h3>
-        <div class="contenedor-largo">
+        <div class="contenedor-largo background">
             <div class="izquierda">
                 <div class="caja-texto" style="padding-top: 30px;">
                     <p>
@@ -555,7 +555,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Espacios eb blanco</h3>
-        <div class="contenedor-mini">
+        <div class="contenedor-mini background">
             <div class="caja-texto">
                 <p>
                     En términos de diseño web, son los espacios entre gráficos, columnas, imágenes, texto, márgenes, y
@@ -569,7 +569,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Legibilidad</h3>
-        <div class="contenedor-mini-m">
+        <div class="contenedor-mini-m background">
             <div class="caja-texto">
                 <p>
                     El espacio en blanco es esencial para hacer legible el contenido de la web. Como diseñadores,
@@ -581,7 +581,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Diseño de tono y marca</h3>
-        <div class="contenedor-mini-m">
+        <div class="contenedor-mini-m background">
             <div class="caja-texto" style="padding-top: 20px;">
                 <p>
                     El espacio en blanco contribuye al tono del diseño general. Por ejemplo, los sitios web con mucho
@@ -592,7 +592,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Enfoque y atención</h3>
-        <div class="contenedor-mini-m">
+        <div class="contenedor-mini-m background">
             <div class="caja-texto">
                 <p>
                     Los espacios en blanco en diseño pueden ayudar a guiar al usuario a través del contenido de una web,
@@ -606,7 +606,7 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Maquetación web</h2>
-        <div class="contenedor-mini">
+        <div class="contenedor-mini background">
             <div class="caja-texto" style="padding-top: 30px;">
                 <p>
                     Maquetación mediante tablas y mediante <br /><br />
@@ -647,7 +647,7 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Mapa de navegación</h2>
-        <div class="contenedor-largo">
+        <div class="contenedor-largo background">
             <div class="izquierda">
                 <img src="assets/img/planificacion/mapa-nav.png" alt="ejemplo mapa de navegación web"
                     style="width: 600px;">
@@ -663,7 +663,7 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Guías de estilo</h2>
-        <div class="contenedor-mini-m">
+        <div class="contenedor-mini-m background">
             <div class="caja-texto">
                 <p>
                     Una guía de estilo es una colección de elementos prediseñados gráficos y reglas que
@@ -673,7 +673,7 @@
             </div>
         </div>
         <h2 style="margin-top: 100px;">Interacción persona-ordenador</h2>
-        <div class="contenedor-mini-m">
+        <div class="contenedor-mini-m background">
             <div class="caja-texto">
                 <p>
                     La interacción persona-ordenador , es un subsector de la informática. Dentro de esta
