--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -47,7 +47,7 @@
     <title>Accesibilidad web - David Zapico</title>
 </head>
 
-<body>
+<body class="blue">
     <header>
         <nav id="menu">
             <div class="menu-item">
@@ -228,18 +228,18 @@
                         <li>
                             Deficiencias visuales: Entre las que se encuentran la ceguera, la visión reducida y los
                             problemas en visualización de color.
-                        </li><br/>
+                        </li><br />
                         <li>
                             Deficiencias auditivas: Estas deficiencias pueden ser consideradas menos limitadoras en el
                             acceso y uso de contenidos digitales, debido a que el canal sonoro es mucho menos utilizado
                             en interfaces web que el canal visual. Aún así, no podemos olvidar limitaciones y barreras
                             derivadas de esta discapacidad, como es el caso del lenguaje.
-                        </li><br/>
+                        </li><br />
                         <li>
                             Deficiencias motrices: Son las relacionadas con la capacidad de movilidad del usuario. Estos
                             usuarios no suelen ser capaces de interactuar con el sistema a través de dispositivos de
                             entrada tradicionales, por lo que utilizan dispositivos alternativos (Ej: basados en voz).
-                        </li><br/>
+                        </li><br />
                         <li>
                             Deficiencias cognitivas y de lenguaje: Son usuarios que presentan problemas en el uso del
                             lenguaje, la lectura, percepción, memoria, salud mental...
@@ -249,105 +249,149 @@
                 </div>
             </div>
         </div>
-        <h2>El consorcio World Wide Web(W3C)</h2>
+        <h2 style="margin-top: 100px;">El consorcio World Wide Web(W3C)</h2>
         <h3>Que es, estructura y objetivos</h3>
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-        <h2>Evolución web</h2>
+        <div class="contenedor-med border">
+            <div class="caja-texto">
+                <p>
+                    El W3C (World Wide Web Consortium) es un comité que se dedica a implementar
+                    tecnologías uniformes en el uso y desarrollo de Internet. El organismo fue fundado en
+                    el MIT en Cambridge, Massachusetts, EE. UU. en 1994. Fundador es Tim Berners-Lee.
+                </p>
+            </div>
+            <div class="abajo">
+                <img src="assets/img/accesibilidad/w3c.png" alt="Logo consorcio W3C">
+            </div>
+        </div>
+        <h2 style="margin-top: 100px;">Evolución web</h2>
         <h3>Web 1.0. Los comienzos</h3>
+        <div class="contenedor-med2 border radius">
+            <div class="caja-texto">
+                <p>
+                    Web 1.0 se refiere a un estado de la World Wide Web. Es un término usado para describir la Web antes
+                    del impacto de la «fiebre punto com» en el 2001, que es visto por muchos como el momento en que el
+                    internet dio un giro.
+                    El concepto Web 1.0 surgió simultáneamente al de Web 2.0, y se usa en relación con este segundo
+                    término para comparar ambos. <br /> Elementos de diseño:<br /><br />
+                <ul>
+                    <li>
+                        Páginas estáticas en vez de dinámicas por el usuario que la visita.
+                    </li>
+                    <li>
+                        El uso de framesets o marcos.
+                    </li>
+                    <li>
+                        Extensiones propias del HTML como "blink" y "marquee", etiquetas introducidas durante la guerra
+                        de navegadores web.
+                    </li>
+                    <li>
+                        Libros de visitas en línea o guestbooks.
+                    </li>
+                    <li>
+                        Botones GIF, casi siempre a una resolución típica de 88x31 píxeles en tamaño
+                        promocionando navegadores web u otros productos.
+                    </li>
+                    <li>
+                        Formularios HTML enviados vía correo electrónico. Un usuario llenaba un
+                        formulario y después de hacer clic se enviaba a través de un cliente de correo electrónico, con
+                        el problema que en el código se podía observar los detalles del envío del correo electrónico.
+                    </li>
+                    <li>
+                        No se podían añadir comentarios ni nada parecido.
+                    </li>
+                    <li>
+                        Todas sus páginas se creaban de forma fija y muy pocas veces se actualizaban.
+                    </li>
+                    <li>
+                        No se trata de una nueva versión, sino de una nueva forma de ver las cosas.
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
+        <iframe src="http://info.cern.ch/" width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
+        <h3 style="margin-top: 50px;">Web 2.0. Un paso adelante</h3>
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto">
+                <p>
+                    El término 'Web 2.0' o 'Web social'1 comprende aquellos sitios web que facilitan
+                    compartir información, la interoperabilidad, el diseño centrado en el usuario y
+                    la colaboración en la World Wide Web. Web 2.0 permite a los usuarios interactuar y
+                    colaborar entre sí, como creadores de contenido. La red social conocida como web
+                    2.0 pasa de ser un simple contenedor o fuente de información; la web en este caso se
+                    convierte en una plataforma de trabajo colaborativo.
+                </p>
+            </div>
+        </div>
+        <iframe src=" " width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
 
 
-        <h3>Web 2.0. Un paso adelante</h3>
+        <h3 style="margin-top: 50px;">Web 3.0. Nuevos retos</h3>
+        <div class="contenedor-mini-m border radius">
+            <div class="caja-texto">
+                <p>
+                    Web 3.0 o web semántica, es una expresión que se utiliza para describir la evolución
+                    del uso y la interacción de las personas en internet a través de diferentes formas entre
+                    las que se incluyen la transformación de la red en una base de datos, un movimiento
+
+                    social con el objetivo de crear contenidos accesibles por múltiples aplicaciones non-
+                    browser (sin navegador), el empuje de las tecnologías, de inteligencia artificial, la web
+                    semántica, la Web Geoespacial o la Web 3D.
+                </p>
+            </div>
+        </div>
+        <iframe src=" " width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
 
 
-        <h3>Web 3.0. Nuevos retos</h3>
 
 
 
 
-
-
-
-
-
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-        <h2>Pautas de accesibilidad para el diseño web</h2>
+        <h2 style="margin-top: 100px;">Pautas de accesibilidad para el diseño web</h2>
         <h3>Versión WCAG 1.0.</h3>
 
 
 
-        <h3>Niveles de prioridad de las pautas WCAG 1.0.</h3>
+        <h3 style="margin-top: 50px;">Niveles de prioridad de las pautas WCAG 1.0.</h3>
 
 
 
-        <h3>Versión WCAG 2.0.</h3>
+        <h3 style="margin-top: 50px;">Versión WCAG 2.0.</h3>
 
 
 
-        <h3>Niveles de WCAG 2.0.</h3>
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-        <h2>Consejos para crear una web accesible</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <h3 style="margin-top: 50px;">Niveles de WCAG 2.0.</h3>
 
 
 
 
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-        <h2>Herramientas de evaluación</h2>
+        <h2 style="margin-top: 100px;">Consejos para crear una web accesible</h2>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <h2 style="margin-top: 100px;">Herramientas de evaluación</h2>
         <h3>Herramnientas de evaluación automáticas</h3>
 
 
 
 
-        <h3>Herramnientas de evaluación manuales</h3>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <h3 style="margin-top: 50px;">Herramnientas de evaluación manuales</h3>
 
 
 
