--- a/planificacion.html
+++ b/planificacion.html
@@ -45,7 +45,7 @@
     <!-- TITLE -->
     <title>Planificación de interfaces web - David Zapico</title>
 </head>
-<body>
+<body class="white">
     <header>
         <nav id="menu">
             <div class="menu-item">
