--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -309,7 +309,8 @@
                 </p>
             </div>
         </div>
-        <iframe src="http://info.cern.ch/" width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
+        <iframe src="http://info.cern.ch/" width="100%" height="720" frameborder="1000"
+            style="background-color: #ffffff; border-radius: 15px;"></iframe>
         <h3 style="margin-top: 50px;">Web 2.0. Un paso adelante</h3>
         <div class="contenedor-mini-m border radius">
             <div class="caja-texto">
@@ -323,9 +324,8 @@
                 </p>
             </div>
         </div>
-        <iframe src=" " width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
-
-
+        <iframe src="https://www.wikipedia.com" width="100%" height="720" frameborder="1000"
+            style="background-color: #ffffff; border-radius: 15px;"></iframe>
         <h3 style="margin-top: 50px;">Web 3.0. Nuevos retos</h3>
         <div class="contenedor-mini-m border radius">
             <div class="caja-texto">
@@ -340,22 +340,66 @@
                 </p>
             </div>
         </div>
-        <iframe src=" " width="100%" height="720" frameborder="1000" style="background-color: #ffffff; border-radius: 15px;"></iframe>
-
-
-
-
-
-
+        <iframe src="https://www.gnoss.com" width="100%" height="720" frameborder="1000"
+            style="background-color: #ffffff; border-radius: 15px;"></iframe>
         <h2 style="margin-top: 100px;">Pautas de accesibilidad para el diseño web</h2>
         <h3>Versión WCAG 1.0.</h3>
-
-
-
+        <div class="contenedor-med2 border" style="padding-left: 40px; padding-top: 40px;">
+            <p>
+            <ol>
+                <li>Pauta. Proporcionar alternativas equivalentes al contenido visual y auditivo.</li>
+                <li>Pauta. No confíe solo en el color.</li>
+                <li>Pauta. Utilice hojas de estilo y marcado y hágalo correctamente.</li>
+                <li>Pauta. Aclarar el uso del lenguaje natural.</li>
+                <li>Pauta. Cree tablas que se transformen con gracia.</li>
+                <li>Pauta. Asegúrese de que las páginas con nuevas tecnologías se transformen con elegancia.</li>
+                <li>Pauta. Garantizar el control del usuario de los cambios de contenido urgentes.</li>
+                <li>Pauta. Garantizar la accesibilidad directa de las interfaces de usuario integradas.</li>
+                <li>Pauta. Diseño para la independencia del dispositivo.</li>
+                <li>Pauta. Utilice soluciones provisionales.</li>
+                <li>Pauta. Utilice tecnologías y directrices del W3C.</li>
+                <li>Pauta. Proporcione información de contexto y orientación.</li>
+                <li>Pauta. Proporcionar mecanismos de navegación claros.</li>
+                <li>Pauta. Asegúrese de que los documentos sean claros y sencillos.</li>
+            </ol>
+            </p>
+        </div>
         <h3 style="margin-top: 50px;">Niveles de prioridad de las pautas WCAG 1.0.</h3>
-
-
-
+        <div class="contenedor-largo border radius">
+            <div class="caja-texto">
+                <p>
+                    Cada puesto de control tiene un nivel de prioridad asignado por el Grupo de Trabajo en función del
+                    impacto del punto de control en la accesibilidad.
+                </p><br/><br/>
+                <h4>Prioridad 1</h4>
+                <p>
+                    Un desarrollador de contenido web debe cumplir con este punto de control. De lo contrario, a uno o
+                    más grupos les resultará imposible acceder a la información del documento. Satisfacer este punto de
+                    control es un requisito básico para que algunos grupos puedan utilizar documentos web.
+                </p><br/><br/>
+                <h4>Prioridad 2</h4>
+                <p>
+                    Un desarrollador de contenido web debe cumplir con este punto de control. De lo contrario, uno o más
+                    grupos tendrán dificultades para acceder a la información del documento. Satisfacer este punto de
+                    control eliminará las barreras importantes para acceder a los documentos web.
+                </p><br/><br/>
+                <h4>Prioridad 3</h4>
+                <p>
+                    Un desarrollador de contenido web puede abordar este punto de control. De lo contrario, uno o más
+                    grupos tendrán dificultades para acceder a la información del documento. Satisfacer este punto de
+                    control mejorará el acceso a los documentos web. Algunos puntos de control especifican un nivel de
+                    prioridad que puede cambiar bajo ciertas condiciones (indicadas). <br/><br/>
+                    Esta sección define tres niveles de conformidad con este documento:
+                </p><br/>
+                <ul>
+                    <li><strong>Nivel de conformidad "A":</strong> se cumplen todos los puntos de control de Prioridad 1;</li>
+                    <li><strong>Nivel de conformidad "Doble-A":</strong> se cumplen todos los puntos de control de
+                        Prioridad 1 y 2;</li>
+                    <li><strong>Nivel de conformidad "Triple-A":</strong> se cumplen todos los puntos de control de
+                        Prioridad 1, 2 y 3;</li>
+                </ul>
+            </div>
+        </div>
         <h3 style="margin-top: 50px;">Versión WCAG 2.0.</h3>
 
 
@@ -399,7 +443,7 @@
 
 
         <div class="next">
-            <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="usabilidad.html"><i
+            <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="usabilidad.html"> <i
                         class="fas fa-mouse"></i> usabilidad</a>.</p>
         </div>
     </div>
