--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- TITLE -->
     <title>Guía de estilos web - David Zapico</title>
 </head>
-<body>
+<body class="white">
     <header>
         <nav id="menu">
             <div class="menu-item">
