--- a/planificacion.html
+++ b/planificacion.html
@@ -207,7 +207,7 @@
         <h3>El Color</h3>
         <div class="contenedor background">
             <div class="izquierda">
-                <div class="caja-texto">
+                <div class="caja-texto" style="padding-top: 40px;">
                     <h4>Modelo RGB</h4>
                     <p>
                         Debe su nombre a las iniciales de los tres colores primarios: Red (rojo), Green (verde) y Blue
@@ -394,7 +394,7 @@
         <h3 style="padding-top: 50px;">Los Iconos</h3>
         <div class="contenedor background">
             <div class="izquierda">
-                <img src="assets/img/planificacion/iconos.png" width="400px" alt="iconos web">
+                <img src="assets/img/planificacion/iconos.png" width="400px" style="padding-top: 60px;" alt="iconos web">
             </div>
             <div class="derecha">
                 <div class="caja-texto" style="padding-top: 100px;">
@@ -445,9 +445,9 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Cuerpo de la página</h3>
-        <div class="contenedor-largo background">
+        <div class="contenedor-largo-med background">
             <div class="izquierda">
-                <div class="caja-texto" style="padding-top: 30px;">
+                <div class="caja-texto" style="padding-top: 50px;">
                     <p>
                         Es la parte de la web que presenta a la información específica sobre un tema concreto. El cuerpo
                         de la
@@ -480,12 +480,12 @@
             </div>
             <div class="derecha">
                 <img src="assets/img/planificacion/cuerpo.png" alt="estructura cuerpo pagina web"
-                    style="width: 600px; padding-top: 80px;">
+                    style="width: 425px; padding-top: 180px;">
             </div>
         </div>
         <h3 style="padding-top: 50px;">Pie de página</h3>
         <div class="contenedor-largo-super-max background">
-            <div class="caja-texto" style="padding-top: 50px;">
+            <div class="caja-texto" style="padding-top: 15px;">
                 <p>
                     Está bien empezar por el principio: la definición. El footer o pie de página es la parte inferior de
                     una web y que, normalmente, encontrarás diferenciada del resto (cambios de color, de fuente,
@@ -554,7 +554,7 @@
                 <img class="grande" src="assets/img/planificacion/footer.png" alt="ejemplo footer/pie de pagina web">
             </div>
         </div>
-        <h3 style="padding-top: 50px;">Espacios eb blanco</h3>
+        <h3 style="padding-top: 50px;">Espacios en blanco</h3>
         <div class="contenedor-mini background">
             <div class="caja-texto">
                 <p>
@@ -592,7 +592,7 @@
             </div>
         </div>
         <h3 style="padding-top: 50px;">Enfoque y atención</h3>
-        <div class="contenedor-mini-m background">
+        <div class="contenedor-mini background">
             <div class="caja-texto">
                 <p>
                     Los espacios en blanco en diseño pueden ayudar a guiar al usuario a través del contenido de una web,
@@ -619,7 +619,7 @@
         </div>
         <h2 style="margin-top: 100px;">Prototipo web</h2>
         <div class="contenedor-largo-super-medium background">
-            <div class="caja-texto">
+            <div class="caja-texto" style="padding-top: 50px; padding-bottom:50px">
                 <p>
                     Un prototipo web consiste en un boceto, navegable o no, que permiten crear una referencia visual de
                     la estructura de una página web, definiendo al detalle el contenido y su distribución visual,
@@ -633,9 +633,9 @@
                 </p>
             </div>
 
-            <img src="assets/img/planificacion/prototipo.png" alt="ejemplo prototipo web">
+            <img src="assets/img/planificacion/prototipo.png" width="90%" alt="ejemplo prototipo web">
 
-            <div class="caja-texto">
+            <div class="caja-texto" style="padding-top: 50px">
                 <p>
                     Una vez esto, comenzará el diseño de wireframes o bocetos, con el fin de determinar el lugar donde
                     situar los elementos principales de la web, pensando siempre en donde los espera encontrar el
@@ -650,7 +650,7 @@
         <div class="contenedor-largo background">
             <div class="izquierda">
                 <img src="assets/img/planificacion/mapa-nav.png" alt="ejemplo mapa de navegación web"
-                    style="width: 600px;">
+                    style="width: 500px; padding-top: 80px;">
             </div>
             <div class="derecha">
                 <div class="caja-texto" style="padding-top: 200px;">
