--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -206,9 +206,9 @@
     <div id="contenido">
         <h1>Accesibilidad web</h1>
         <h2>Concepto de accesibilidad web</h2>
-        <div class="contenedor">
+        <div class="contenedor-largo">
             <div class="izquierda-esp-med border radius">
-                <div class="caja-texto" style="padding-top: 100px;">
+                <div class="caja-texto" style="padding-top: 130px;">
                     <h3>Concepto y objetivos de la accesibilidad web</h3>
                     <p>
                         Accesibilidad Web significa que sitios web, herramientas y tecnologías están
@@ -265,8 +265,8 @@
         </div>
         <h2 style="margin-top: 100px;">Evolución web</h2>
         <h3>Web 1.0. Los comienzos</h3>
-        <div class="contenedor-med2 border radius">
-            <div class="caja-texto">
+        <div class="contenedor border radius">
+            <div class="caja-texto" style="margin-top: 30px;">
                 <p>
                     Web 1.0 se refiere a un estado de la World Wide Web. Es un término usado para describir la Web antes
                     del impacto de la «fiebre punto com» en el 2001, que es visto por muchos como el momento en que el
