--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -365,8 +365,8 @@
             </p>
         </div>
         <h3 style="margin-top: 50px;">Niveles de prioridad de las pautas WCAG 1.0.</h3>
-        <div class="contenedor-largo border radius">
-            <div class="caja-texto">
+        <div class="contenedor-largo-med border radius">
+            <div class="caja-texto" style="margin-top: 20px;">
                 <p>
                     Cada puesto de control tiene un nivel de prioridad asignado por el Grupo de Trabajo en función del
                     impacto del punto de control en la accesibilidad.
