--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -370,29 +370,30 @@
                 <p>
                     Cada puesto de control tiene un nivel de prioridad asignado por el Grupo de Trabajo en función del
                     impacto del punto de control en la accesibilidad.
-                </p><br/><br/>
+                </p><br /><br />
                 <h4>Prioridad 1</h4>
                 <p>
                     Un desarrollador de contenido web debe cumplir con este punto de control. De lo contrario, a uno o
                     más grupos les resultará imposible acceder a la información del documento. Satisfacer este punto de
                     control es un requisito básico para que algunos grupos puedan utilizar documentos web.
-                </p><br/><br/>
+                </p><br /><br />
                 <h4>Prioridad 2</h4>
                 <p>
                     Un desarrollador de contenido web debe cumplir con este punto de control. De lo contrario, uno o más
                     grupos tendrán dificultades para acceder a la información del documento. Satisfacer este punto de
                     control eliminará las barreras importantes para acceder a los documentos web.
-                </p><br/><br/>
+                </p><br /><br />
                 <h4>Prioridad 3</h4>
                 <p>
                     Un desarrollador de contenido web puede abordar este punto de control. De lo contrario, uno o más
                     grupos tendrán dificultades para acceder a la información del documento. Satisfacer este punto de
                     control mejorará el acceso a los documentos web. Algunos puntos de control especifican un nivel de
-                    prioridad que puede cambiar bajo ciertas condiciones (indicadas). <br/><br/>
+                    prioridad que puede cambiar bajo ciertas condiciones (indicadas). <br /><br />
                     Esta sección define tres niveles de conformidad con este documento:
-                </p><br/>
+                </p><br />
                 <ul>
-                    <li><strong>Nivel de conformidad "A":</strong> se cumplen todos los puntos de control de Prioridad 1;</li>
+                    <li><strong>Nivel de conformidad "A":</strong> se cumplen todos los puntos de control de Prioridad
+                        1;</li>
                     <li><strong>Nivel de conformidad "Doble-A":</strong> se cumplen todos los puntos de control de
                         Prioridad 1 y 2;</li>
                     <li><strong>Nivel de conformidad "Triple-A":</strong> se cumplen todos los puntos de control de
@@ -401,47 +402,140 @@
             </div>
         </div>
         <h3 style="margin-top: 50px;">Versión WCAG 2.0.</h3>
-
+        <div class="contenedor-med2 border radius">
+            <div class="caja-texto">
+                <p>
+                <ul>
+                    <li>
+                        Principio 1: <br /> Perceptible – La información y los componentes de la interfaz de usuario
+                        deben ser
+                        presentados a los usuarios de modo que ellos puedan percibirlos.
+                    </li><br />
+                    <li>
+                        Principio 2: <br /> Operable – Los componentes de la interfaz de usuario y la navegación deben
+                        ser
+                        operables.
+                    </li><br />
+                    <li>
+                        Principio 3: <br /> Comprensible – La información y el manejo de la interfaz de usuario deben
+                        ser
+                        comprensibles.
+                    </li><br />
+                    <li>
+                        Principio 4: <br /> Robusto – El contenido debe ser suficientemente robusto como para ser
+                        interpretado de
+                        forma fiable por una amplia variedad de aplicaciones de usuario, incluyendo las ayudas técnicas.
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
 
 
         <h3 style="margin-top: 50px;">Niveles de WCAG 2.0.</h3>
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <div class="contenedor-med2 border radius">
+            <div class="caja-texto">
+                <p>
+                <ul>
+                    <li>
+                        Principio 1: <br /> Perceptible: la información y los componentes de la interfaz de usuario
+                        deben ser mostrados a los usuarios en formas que ellos puedan entender.
+                    </li><br />
+                    <li>
+                        Principio 2: <br /> Operable: Los componentes de la interfaz de usuario y la navegación debe
+                        ser manejable.
+                    </li><br />
+                    <li>
+                        Principio 3: <br /> Comprensible. La información y las operaciones de usuarios deben ser
+                        comprensibles.
+                    </li><br />
+                    <li>
+                        Principio 4: <br /> Robustez: el contenido deber ser suficientemente robusto para que pueda
+                        ser bien interpretado por una gran variedad de agentes de usuario, incluyendo
+                        tecnologías de asistencia.
+                    </li>
+                </ul>
+                </p>
+            </div>
+        </div>
         <h2 style="margin-top: 100px;">Consejos para crear una web accesible</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <div class="contenedor-largo-med2 border radius">
+            <div class="caja-texto" style="padding-top: 30px;">
+                <p>
+                <ol>
+                    <li>
+                        Asegúrate de que su página web sea compatible con el teclado: <br />
+                        Para que un sitio web sea accesible, debe funcionar sin el de un ratón. Esto se debe a que
+                        muchas tecnologías
+                        asistivas dependen de la navegación solo con el teclado. Por lo que debe ser posible utilizar
+                        todas las
+                        funciones principales de tu sitio a través de un teclado y nada más, esto incluye acceder a
+                        todas las páginas,
+                        enlaces, contenido, etc.
+                    </li> <br />
+                    <li>
+                        Agrega texto alternativo a las imágenes: <br/>
+                        Cuando introduces imágenes en WordPress , probablemente hayas visto este campo.
+                    </li> <br />
+                    <li>
+                        Elige tus colores con cuidado: <br/>
+                        Al crear un esquema de color para un sitio web, asegúrate de que los colores de primer plano y
+                        fondo cumplan con el nivel de contraste mínimo requerido. Este es una relación de contraste de 4.5:1 para texto
+                        estándar y 3:1 para texto grande.
+                    </li> <br />
+                    <li>
+                        Usa encabezados para estructurar tu contenido correctamente: <br/>
+                        Otra tarea clave para hacer que tu página web sea accesible es estructurar el contenido mediante el uso de
+                        encabezados ( H1, H2, H3 ). Hacer esto hará que tu contenido sea mucho más fácil de entender.
+                    </li> <br />
+                    <li>
+                        Diseña los formularios para que sean accesibles: <br/>
+                        Los formularios son un elemento común en la mayoría de las páginas web, pero deben diseñarse con cuidado y
+                        organizarse de manera lógica. Las instrucciones, claves para rellenarlo, campos de formulario obligatorios,
+                        requisitos de formato de campo, etc. deben identificarse claramente.
+                    </li> <br />
+                    <li>
+                        No uses tablas para diseñar: <br/>
+                        Cuando se trata de mostrar datos, las tablas son útiles. Facilitan mucho a todos los usuarios, incluidos
+                        aquellos que utilizan tecnologías asistivas , analizar una gran cantidad de datos.
+                    </li> <br />
+                    <li>
+                        Comprueba que al redimensionar el texto no se rompe la estructura de la página web: <br/>
+                        La mayoría de los dispositivos y navegadores permitirán a los usuarios cambiar el tamaño del texto, lo que puede
+                        ser útil para las personas con discapacidad visual. Sin embargo, si no creas
+                        tu página web para admitir esta función, cambiar el tamaño del texto podría romper su diseño o dificultar la
+                        interacción con la página.
+                    </li> <br />
+                    <li>
+                        Archivos multimedia: <br/>
+                        La reproducción automática de archivos multimedia, es decir, que la música o los videos comiencen cuando se
+                        carga una página puede ser muy molesto , pero el problema es aún mayor en términos de accesibilidad.
+                    </li> <br />
+                </ol>
+                </p>
+            </div>
+        </div>
         <h2 style="margin-top: 100px;">Herramientas de evaluación</h2>
-        <h3>Herramnientas de evaluación automáticas</h3>
-
-
-
-
-        <h3 style="margin-top: 50px;">Herramnientas de evaluación manuales</h3>
-
-
-
-
-
-
+        <div class="contenedor-med2 border radius">
+            <div class="caja-texto">
+                <h3>Herramientas:</h3>
+                <p>
+                <ul>
+                    <li>Accessibility Check</li>
+                    <li>Accessibility Valet Demostrator AccessMonitor</li>
+                    <li>AChecker</li>
+                    <li>Cynthia Says</li>
+                    <li>Deque Worldspace FireEyes EvalAccess 2.0</li>
+                    <li>eXaminator</li>
+                    <li>Functional Accesibility Evaluator TAW</li>
+                    <li>Total Validator</li>
+                    <li>WAVE</li>
+                    <li>Web Accessibility Checker</li>
+                    <li>Web Accessibility Inspector</li>
+                </ul>
+                </p>
+            </div>
+        </div>
         <div class="next">
             <p>Siguiente página <i class="far fa-arrow-right"></i> <a href="usabilidad.html"> <i
                         class="fas fa-mouse"></i> usabilidad</a>.</p>
